fix layout on iphone x

--- a/css/style.css
+++ b/css/style.css
@@ -46,51 +46,51 @@ button {
 
 @keyframes glitch1 {
   0% {
-    clip: rect(86px, 9999px, 96px, 0); }
+    clip: rect(92px, 9999px, 62px, 0); }
   10% {
-    clip: rect(51px, 9999px, 11px, 0); }
+    clip: rect(99px, 9999px, 56px, 0); }
   20% {
-    clip: rect(30px, 9999px, 65px, 0); }
+    clip: rect(21px, 9999px, 63px, 0); }
   30% {
-    clip: rect(14px, 9999px, 49px, 0); }
+    clip: rect(70px, 9999px, 26px, 0); }
   40% {
-    clip: rect(34px, 9999px, 17px, 0); }
+    clip: rect(34px, 9999px, 16px, 0); }
   50% {
-    clip: rect(24px, 9999px, 82px, 0); }
+    clip: rect(86px, 9999px, 96px, 0); }
   60% {
-    clip: rect(92px, 9999px, 22px, 0); }
+    clip: rect(32px, 9999px, 67px, 0); }
   70% {
-    clip: rect(71px, 9999px, 99px, 0); }
+    clip: rect(21px, 9999px, 100px, 0); }
   80% {
-    clip: rect(4px, 9999px, 76px, 0); }
+    clip: rect(38px, 9999px, 97px, 0); }
   90% {
-    clip: rect(86px, 9999px, 17px, 0); }
+    clip: rect(92px, 9999px, 83px, 0); }
   100% {
-    clip: rect(26px, 9999px, 73px, 0); } }
+    clip: rect(90px, 9999px, 20px, 0); } }
 
 @keyframes glitch2 {
   0% {
-    clip: rect(45px, 9999px, 30px, 0); }
+    clip: rect(30px, 9999px, 96px, 0); }
   10% {
-    clip: rect(90px, 9999px, 29px, 0); }
+    clip: rect(52px, 9999px, 66px, 0); }
   20% {
-    clip: rect(65px, 9999px, 17px, 0); }
+    clip: rect(67px, 9999px, 69px, 0); }
   30% {
-    clip: rect(24px, 9999px, 47px, 0); }
+    clip: rect(97px, 9999px, 40px, 0); }
   40% {
-    clip: rect(64px, 9999px, 84px, 0); }
+    clip: rect(2px, 9999px, 68px, 0); }
   50% {
-    clip: rect(93px, 9999px, 24px, 0); }
+    clip: rect(22px, 9999px, 55px, 0); }
   60% {
-    clip: rect(21px, 9999px, 41px, 0); }
+    clip: rect(60px, 9999px, 6px, 0); }
   70% {
-    clip: rect(60px, 9999px, 49px, 0); }
+    clip: rect(85px, 9999px, 71px, 0); }
   80% {
-    clip: rect(100px, 9999px, 31px, 0); }
+    clip: rect(63px, 9999px, 88px, 0); }
   90% {
-    clip: rect(1px, 9999px, 48px, 0); }
+    clip: rect(37px, 9999px, 71px, 0); }
   100% {
-    clip: rect(37px, 9999px, 63px, 0); } }
+    clip: rect(18px, 9999px, 92px, 0); } }
 
 .u-fadeOut {
   animation: fadeOut .2s ease-out forwards; }
@@ -133,6 +133,7 @@ button {
       animation: glitch1 1s ease-out alternate-reverse infinite; }
   .releaseBox__img {
     width: 50vh;
+    max-width: 90vw;
     height: auto;
     margin-bottom: 2rem;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2); }
@@ -152,6 +153,9 @@ button {
     font-size: 1.8rem; }
     .releaseBox__art-credit:first-of-type {
       margin-top: 2rem; }
+  @media only screen and (max-width: 600px) {
+    .releaseBox {
+      margin: 0; } }
 
 .btn {
   outline: none;
